# nexos

./: Cargo.toml  fix_path.bat  setup.bat  x86_64-nexos.json
bootloader/src/: main.rs
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: process_memory.rs
kernel/src/process/: mod.rs  scheduler.rs
kernel/src/syscall/: mod.rs
nexos/: Cargo.toml  README.md  x86_64-nexos.json
nexos/.cargo/: config.toml
nexos/bootloader/: Cargo.toml
nexos/kernel/: Cargo.toml
nexos/kernel/src/: main.rs
nexos/kernel/src/arch/x86_64/: mod.rs
nexos/kernel/src/memory/: mod.rs
nexos/kernel/src/process/: mod.rs
src/: main.rs  shell.rs
src/arch/: mod.rs
src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs
src/drivers/: keyboard.rs  mod.rs  serial.rs  vga.rs
src/memory/: allocator.rs  frame_allocator.rs  mod.rs  page_table.rs
src/process/: mod.rs  scheduler.rs
