[package]
name = "nexos"
version = "0.1.0"
edition = "2021"
authors = ["NexOS Contributors"]
description = "A modern microkernel-based operating system written in Rust"

[workspace]
members = [
    "kernel",
    "bootloader",
]

[dependencies]
bootloader = { version = "0.9.29", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
acpi = "4.1.1"

[features]
default = ["serial_debug"]
serial_debug = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[package.metadata.bootloader]
physical-memory-offset = "0xb8000"
boot-info-address = "70368744177664"
