[package]
name = "nexos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.10.12", features = ["map_physical_memory"]}
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
spin = "0.9.8"
acpi = "4.1.1"
linked_list_allocator = "0.10.5"
volatile = "0.4.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[features]
default = ["serial_debug"]
serial_debug = []
